# KLTN04

./: .env  .gitattributes  .gitignore  Backend.txt  CommitApi.md  ENHANCED_GITHUB_API_GUIDE.md  FRONTEND_ASSESSMENT.md  Frontend.txt  INSTALLATION_GUIDE.md  Project.md  README.md  README_EN.md  REPO_SYNC_MANAGER_COMPLETION.md  SYNC_OPTIMIZATION_REPORT.md  SYNC_WITH_DIFF_SUMMARY.md  TYPEERROR_FIX_SUMMARY.md  ai_models_analysis.md  auth.py  commit_analysis_report.json  fix_repo_queries.py  main.py  pyproject.toml  real_system_analysis.md  requirements.txt  requirements_new.txt  single_actor_summary.md  source_dump.txt  test_commit_analysis_api.py  test_diff_sync.py  test_fix_verification.py  test_optimized_sync.py  unified_roles_analysis.md  use_case_accurate_system.md  use_case_basic.md  use_case_complete.md  use_case_detailed.md  use_case_diagram.md  use_case_final_summary.md  use_case_mermaid.md  use_case_mermaid_single_actor.md  (+3 more)
.github/: copilot-instructions.md
ai/api/: endpoints.py
ai/services/: commit_classification_service.py
backend/: FORCE_UPDATE_GUIDE.md  MULTIFUSION_V2_API_DOCS.md  alembic.ini  check_repos.py  check_schema.py  commit_analysis_report_20250601_020511.json  commit_analysis_report_20250601_021017.json  create_database.py  demo_member_analysis_v2.py  main.py  migrate_commit_sha.py  requirements.txt  requirements_clean.txt  sample.jsonl  test_commit_by_branch.py  test_multifusion_integration.py  test_multifusion_v2_api.py  test_refined_commit_endpoints.py  test_stats.py
backend/ai/: COMMAND_REFERENCE.md  COMPLETE_SETUP_GUIDE.md  DEPLOYMENT_GUIDE.md  FINAL_MULTIMODAL_EVALUATION_REPORT.json  FINAL_MULTIMODAL_INTEGRATION_REPORT_20250610_081858.json  MULTIMODAL_FUSION_COMPREHENSIVE_ANALYSIS.md  MULTIMODAL_FUSION_EVALUATION_REPORT.md  README.md  README_NEW.md  README_kaggle_setup.md  READY_TO_USE.md  SYSTEM_STATUS_REPORT.md  WINDOWS_SETUP_GUIDE.md  advanced_commit_analysis.py  basic_test.py  check_data_format.py  clean_github_data.py  commit_analyzer.py  commit_analyzer_demo.py  commit_model.py  comprehensive_test.py  comprehensive_test_final.py  comprehensive_test_fixed.py  debug_classification_fixed.py  debug_test.py  download_github_commits.py  download_kaggle_dataset.py  evaluate_multimodal_fusion.py  evaluate_multimodal_model.py  evaluate_multimodal_simple.py  final_system_validation.py  final_validation.py  find_commit_datasets.py  generate_final_report.py  han_commit_analyzer.py  han_commit_analyzer_fixed.py  kaggle_setup_helper.py  multimodal_commit_inference.py  multimodal_evaluation_report.json  multimodal_fusion_inference.py  (+42 more)
backend/api/: deps.py
backend/core/: config.py  lifespan.py  logger.py  oauth.py  security.py  task_exceptions.py
backend/db/: database.py  inspect_db.py  metadata.py
backend/interfaces/: README.md  __init__.py  area_analysis_service_interface.py  multifusion_commit_analyst_service_interface.py  multifusion_v2_service_interface.py  risk_analysis_service_interface.py  service_factory.py  task_commit_service.py  task_service_interface.py
backend/migrations/: env.py
backend/models/: commit_classifier.joblib  commit_model.py  han_multitask.pth  task_model.py
backend/notebooks/: Model_Training.ipynb
backend/schemas/: commit.py  dashboard.py  sync_event.py  task.py
backend/services/: ai_service.py  (+26 more)
docs/: AI_model.md  Architecture.md  Backend_Setup.md  DATABASE_FIX_GUIDE.md  DataBaseee.md  Database_Report.md  ENHANCEMENT_SUMMARY.md  Frontend_Setup.md  HAN_Model_Report.md  MultiFusion_V2_Model_Report.md  Project_Overview.md  database.md  database_schema.md  dataclean.md
frontend/: index.html  jsconfig.json  package-lock.json  package.json  source_dump.txt  vite.config.js
(+408 files in other folders)
