[project]
name = "kltn04"
version = "0.1.0"
description = "AI hỗ trợ quản lý tiến độ dự án lập trình"
authors = [
    {name = "Youaremyhome", email = "ltn66441@GMAIL.COM"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "SQLAlchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.17,<0.1.0)",
    "httpx (>=0.27.2,<0.29.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<1.0.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "scikit-learn (>=1.5.2,<2.0.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "transformers (>=4.46.3,<5.0.0)",
    "nltk (>=3.8.1,<4.0.0)",
    "textblob (>=0.18.0,<0.20.0)",
    "matplotlib (>=3.9.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "alembic (>=1.16.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.4"
mypy = "^1.15.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
spacy = "^3.8.5"
xgboost = "^3.0.0"
shap = "^0.47.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"